--- a/src/components/UI/GameUI.css
+++ b/src/components/UI/GameUI.css
@@ -90,3 +90,29 @@
   transform: translateY(2px);
   box-shadow: 0px 3px 0px #009900;
 }
+
+
+/* Mute button */
+.mute-button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background: rgba(0, 0, 0, 0.25);
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  border-radius: 5px;
+  padding: 10px;
+  cursor: pointer;
+  pointer-events: auto;
+  transition: background-color 0.2s;
+}
+
+.mute-button:hover {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.mute-button svg {
+  display: block;
+  width: 32px;
+  height: 32px;
+  fill: var(--primary-font-color);
+}
